--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.20",
+    "pinia-plugin-persistedstate": "^4.2.0"
   }
 }
